--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -906,84 +906,96 @@
                                 android:layout_marginTop="@dimen/_9sdp"
                                 android:orientation="vertical">
 
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
+                                <TextView
+                                    android:id="@+id/spannableTextView"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginStart="@dimen/_11sdp"
-                                        android:layout_weight="1"
-                                        android:fontFamily="@font/opensans_regular"
-                                        android:text="@string/all_p_deposit"
-                                        android:textColor="@color/dark_grey"
-                                        android:textSize="@dimen/_10ssp" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginStart="@dimen/_3sdp"
-                                        android:layout_weight="1"
-                                        android:fontFamily="@font/opensans_bold"
-                                        android:text="@string/businesstoken"
-                                        android:textColor="@color/dark_grey"
-                                        android:textSize="@dimen/_10ssp" />
-                                </LinearLayout>
-
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginStart="@dimen/_11sdp"
-                                        android:layout_weight="1"
-                                        android:fontFamily="@font/opensans_bold"
-                                        android:text="@string/ac"
-                                        android:textColor="@color/dark_grey"
-                                        android:textSize="@dimen/_10ssp" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_weight="1"
-                                        android:fontFamily="@font/opensans_regular"
-                                        android:text="@string/a_u_pay"
-                                        android:textColor="@color/dark_gray"
-                                        android:textSize="@dimen/_10ssp" />
-                                </LinearLayout>
-
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginStart="@dimen/_11sdp"
-
-                                        android:layout_weight="1"
-                                        android:fontFamily="@font/opensans_regular"
-                                        android:text="@string/outAt"
-                                        android:textColor="@color/dark_grey"
-                                        android:textSize="@dimen/_10ssp" />
-
-                                    <TextView
-                                        android:id="@+id/payoutTimeTV"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_weight="1"
-                                        android:fontFamily="@font/opensans_bold"
-                                        android:text=" 11:59:59 pm PST"
-                                        android:textColor="@color/dark_grey"
-                                        android:textSize="@dimen/_10ssp" />
-                                </LinearLayout>
+                                    android:fontFamily="@font/opensans_regular"
+                                    android:text=""
+                                    android:textColor="@color/dark_grey"
+                                    android:textSize="@dimen/_11ssp"
+                                    android:layout_marginStart="@dimen/_11sdp"
+                                    android:layout_marginEnd="@dimen/_11sdp"
+                                    />
                             </LinearLayout>
+
+<!--                                <LinearLayout-->
+<!--                                    android:layout_width="wrap_content"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:orientation="horizontal">-->
+
+<!--                                    <TextView-->
+<!--                                        android:layout_width="wrap_content"-->
+<!--                                        android:layout_height="wrap_content"-->
+<!--                                        android:layout_marginStart="@dimen/_11sdp"-->
+<!--                                        android:layout_weight="1"-->
+<!--                                        android:fontFamily="@font/opensans_regular"-->
+<!--                                        android:text="@string/all_p_deposit"-->
+<!--                                        android:textColor="@color/dark_grey"-->
+<!--                                        android:textSize="@dimen/_10ssp" />-->
+
+<!--                                    <TextView-->
+<!--                                        android:layout_width="wrap_content"-->
+<!--                                        android:layout_height="wrap_content"-->
+<!--                                        android:layout_marginStart="@dimen/_3sdp"-->
+<!--                                        android:layout_weight="1"-->
+<!--                                        android:fontFamily="@font/opensans_bold"-->
+<!--                                        android:text="@string/businesstoken"-->
+<!--                                        android:textColor="@color/dark_grey"-->
+<!--                                        android:textSize="@dimen/_10ssp" />-->
+<!--                                </LinearLayout>-->
+
+<!--                                <LinearLayout-->
+<!--                                    android:layout_width="wrap_content"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:orientation="horizontal">-->
+
+<!--                                    <TextView-->
+<!--                                        android:layout_width="wrap_content"-->
+<!--                                        android:layout_height="wrap_content"-->
+<!--                                        android:layout_marginStart="@dimen/_11sdp"-->
+<!--                                        android:layout_weight="1"-->
+<!--                                        android:fontFamily="@font/opensans_bold"-->
+<!--                                        android:text="@string/ac"-->
+<!--                                        android:textColor="@color/dark_grey"-->
+<!--                                        android:textSize="@dimen/_10ssp" />-->
+
+<!--                                    <TextView-->
+<!--                                        android:layout_width="wrap_content"-->
+<!--                                        android:layout_height="wrap_content"-->
+<!--                                        android:layout_weight="1"-->
+<!--                                        android:fontFamily="@font/opensans_regular"-->
+<!--                                        android:text="@string/a_u_pay"-->
+<!--                                        android:textColor="@color/dark_gray"-->
+<!--                                        android:textSize="@dimen/_10ssp" />-->
+<!--                                </LinearLayout>-->
+
+<!--                                <LinearLayout-->
+<!--                                    android:layout_width="wrap_content"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:orientation="horizontal">-->
+
+<!--                                    <TextView-->
+<!--                                        android:layout_width="wrap_content"-->
+<!--                                        android:layout_height="wrap_content"-->
+<!--                                        android:layout_marginStart="@dimen/_11sdp"-->
+
+<!--                                        android:layout_weight="1"-->
+<!--                                        android:fontFamily="@font/opensans_regular"-->
+<!--                                        android:text="@string/outAt"-->
+<!--                                        android:textColor="@color/dark_grey"-->
+<!--                                        android:textSize="@dimen/_10ssp" />-->
+
+<!--                                    <TextView-->
+<!--                                        android:id="@+id/payoutTimeTV"-->
+<!--                                        android:layout_width="wrap_content"-->
+<!--                                        android:layout_height="wrap_content"-->
+<!--                                        android:layout_weight="1"-->
+<!--                                        android:fontFamily="@font/opensans_bold"-->
+<!--                                        android:text=" 11:59:59 pm PST"-->
+<!--                                        android:textColor="@color/dark_grey"-->
+<!--                                        android:textSize="@dimen/_10ssp" />-->
+<!--                                </LinearLayout>-->
 
                             <LinearLayout
                                 android:layout_width="match_parent"
