--- a/app/src/main/res/layout/activity_benificial_owner_details.xml
+++ b/app/src/main/res/layout/activity_benificial_owner_details.xml
@@ -61,9 +61,10 @@
 
             <TextView
                 android:id="@+id/owner_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_marginHorizontal="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:layout_marginBottom="@dimen/_2sdp"
                 android:fontFamily="@font/opensans_bold"
