--- a/app/src/main/res/layout/activity_reserve_details.xml
+++ b/app/src/main/res/layout/activity_reserve_details.xml
@@ -87,8 +87,8 @@
                         android:id="@+id/tvReserveID"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_3sdp"
                         android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_3sdp"
                         android:fontFamily="@font/opensans_regular"
                         android:text=" [#ID]"
                         android:textColor="@color/primary_black"
@@ -211,9 +211,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:singleLine="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="end"
+                            android:singleLine="true"
                             android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
@@ -278,14 +278,15 @@
                         android:text="@string/being_held"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
+
                     <TextView
                         android:id="@+id/onHoldAmtTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_9sdp"
-                        android:gravity="center"
                         android:layout_marginHorizontal="@dimen/_11sdp"
+                        android:layout_marginTop="@dimen/_9sdp"
                         android:fontFamily="@font/opensans_regular"
+                        android:gravity="center"
                         android:text="@string/release_scheduled_for"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_11ssp" />
@@ -407,9 +408,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:singleLine="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="end"
+                            android:singleLine="true"
                             android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
@@ -464,8 +465,9 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/to_token_account"
                             android:textColor="@color/xdark_gray"
@@ -477,7 +479,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:singleLine="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="end"
                             android:text=""
@@ -520,41 +521,43 @@
                         android:textSize="@dimen/_10ssp" />
                 </LinearLayout>
 
-                    <androidx.cardview.widget.CardView
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/_11sdp"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    app:cardCornerRadius="@dimen/_10sdp"
+                    app:cardElevation="0dp">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/_11sdp"
-                        android:layout_marginTop="@dimen/_6sdp"
-                        app:cardCornerRadius="@dimen/_10sdp"
-                        app:cardElevation="0dp">
+                        android:orientation="vertical">
 
-                        <LinearLayout
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerviewRV"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical">
+                            android:layout_marginBottom="@dimen/_43sdp"
+                            android:nestedScrollingEnabled="false"
+                            android:scrollbars="none">
 
-                            <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/recyclerviewRV"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/_43sdp"
-                                android:nestedScrollingEnabled="false"
-                                android:scrollbars="none">
+                        </androidx.recyclerview.widget.RecyclerView>
 
-                            </androidx.recyclerview.widget.RecyclerView>
+                    </LinearLayout>
 
-                        </LinearLayout>
-                        <TextView
-                            android:id="@+id/noTransactionsTV"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:fontFamily="@font/opensans_regular"
-                            android:gravity="center"
-                            android:text="@string/you_have_no_transactions"
-                            android:textColor="@color/dark_grey"
-                            android:textSize="@dimen/_10ssp"
-                            android:visibility="gone" />
-                    </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/noTransactionsTV"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/opensans_regular"
+                        android:gravity="center"
+                        android:text="@string/you_have_no_transactions"
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/_10ssp"
+                        android:visibility="gone" />
+                </androidx.cardview.widget.CardView>
+
                 <TextView
                     android:id="@+id/noMoreTransactionsTV"
                     android:layout_width="match_parent"
@@ -566,6 +569,7 @@
                     android:textColor="@color/dark_grey"
                     android:textSize="@dimen/_10ssp"
                     android:visibility="gone" />
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_30sdp" />
