--- a/app/src/main/res/layout/dialog_pay_merchant_with_amount.xml
+++ b/app/src/main/res/layout/dialog_pay_merchant_with_amount.xml
@@ -30,9 +30,10 @@
             android:id="@+id/userNameTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_12sdp"
-            android:layout_marginEnd="@dimen/_12sdp"
+            android:layout_marginStart="@dimen/_25sdp"
+            android:layout_marginEnd="@dimen/_25sdp"
             android:fontFamily="@font/opensans_semibold"
+            android:singleLine="true"
             android:text="@string/paying_dba_name"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -78,9 +79,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_11sdp"
             android:layout_marginTop="@dimen/_10sdp"
-            android:gravity="center"
             android:layout_marginEnd="@dimen/_11sdp"
             android:fontFamily="@font/opensans_semibold"
+            android:gravity="center"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
 
@@ -89,8 +90,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_5sdp"
-            android:gravity="center"
             android:fontFamily="@font/opensans_semibold"
+            android:gravity="center"
             android:textColor="@color/dark_grey"
             android:textSize="@dimen/_11ssp" />
 
@@ -108,8 +109,8 @@
             android:id="@+id/viewLineV"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
-            android:layout_marginTop="@dimen/_11sdp"
             android:layout_marginStart="@dimen/_11sdp"
+            android:layout_marginTop="@dimen/_11sdp"
             android:layout_marginEnd="@dimen/_11sdp"
             android:background="@color/blue_light"
             android:visibility="visible" />
