--- a/app/src/main/res/layout/activity_id_ve_additional_action.xml
+++ b/app/src/main/res/layout/activity_id_ve_additional_action.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
     tools:context=".view.IdVeAdditionalActionActivity">
@@ -13,9 +14,8 @@
         android:id="@+id/idveriErrWithSSNLL"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_alignParentTop="true"
-        android:layout_above="@+id/idveridoneBtn">
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/ssnCloseLL"
@@ -32,12 +32,10 @@
 
         </LinearLayout>
 
-
         <ImageView
             android:layout_width="@dimen/_80sdp"
             android:layout_height="@dimen/_90sdp"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_16sdp"
             android:src="@drawable/ic_ssn_fail" />
 
         <TextView
@@ -50,41 +48,30 @@
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_16ssp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_21sdp"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:layout_marginRight="@dimen/_21sdp"
-            android:fontFamily="@font/opensans_regular"
-            android:text="@string/add_actioncontent"
-            android:textAlignment="center"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_11ssp" />
-
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/ssnTIL"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_54sdp"
             android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_54sdp"
             android:layout_marginEnd="@dimen/_21sdp"
             android:hint="SSN"
             android:textColorHint="@color/black"
+            android:visibility="gone"
             app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
             app:boxCornerRadiusBottomStart="@dimen/_10sdp"
             app:boxCornerRadiusTopEnd="@dimen/_10sdp"
             app:boxCornerRadiusTopStart="@dimen/_10sdp"
             app:boxStrokeColor="@color/primary_color"
             app:expandedHintEnabled="false"
-            app:hintTextColor="@color/primary_color"
-            android:visibility="gone">
+            app:hintTextColor="@color/primary_color">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/ssnET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:autofillHints="creditCardSecurityCode"
                 android:fontFamily="@font/opensans_semibold"
                 android:hint="@string/ssnhint"
                 android:imeOptions="actionDone"
@@ -94,70 +81,102 @@
                 android:textColor="@color/primary_black"
                 android:textColorHint="@color/light_gray"
                 android:textCursorDrawable="@drawable/cursor_color"
-                android:textSize="@dimen/_12ssp"
-                android:autofillHints="creditCardSecurityCode"/>
+                android:textSize="@dimen/_12ssp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
-        <com.greenbox.coyni.utils.outline_et.SSNBOEditText
-            android:id="@+id/ssnOutLineBoxET"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_54sdp"
-            android:layout_marginStart="@dimen/_21sdp"
-            android:layout_marginEnd="@dimen/_21sdp"/>
+            android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/ssnErrorLL"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:visibility="gone"
-            android:layout_marginStart="@dimen/_21sdp"
-            android:layout_marginEnd="@dimen/_21sdp">
-
-            <ImageView
-                android:layout_width="@dimen/_12sdp"
-                android:layout_height="@dimen/_12sdp"
-                android:src="@drawable/ic_erro" />
-
-            <TextView
-                android:id="@+id/ssnErrorTV"
+            <ScrollView
+                android:id="@+id/scrollView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:textColor="@color/error_red"
-                android:textSize="@dimen/_10ssp" />
-        </LinearLayout>
+                android:layout_height="match_parent"
+                android:layout_above="@+id/idveridoneBtn">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_21sdp"
+                        android:layout_marginTop="@dimen/_16sdp"
+                        android:layout_marginRight="@dimen/_21sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="@string/add_actioncontent"
+                        android:textAlignment="center"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11ssp" />
+
+                    <com.greenbox.coyni.utils.outline_et.SSNBOEditText
+                        android:id="@+id/ssnOutLineBoxET"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_21sdp"
+                        android:layout_marginTop="@dimen/_24sdp"
+                        android:layout_marginEnd="@dimen/_21sdp"
+                        android:layout_marginBottom="@dimen/_10sdp" />
+
+                    <LinearLayout
+                        android:id="@+id/ssnErrorLL"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_21sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_marginEnd="@dimen/_21sdp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:layout_width="@dimen/_12sdp"
+                            android:layout_height="@dimen/_12sdp"
+                            android:src="@drawable/ic_erro" />
+
+                        <TextView
+                            android:id="@+id/ssnErrorTV"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_10sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:textColor="@color/error_red"
+                            android:textSize="@dimen/_10ssp" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </ScrollView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/idveridoneBtn"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_43sdp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="@dimen/_21sdp"
+                android:layout_marginRight="@dimen/_21sdp"
+                android:layout_marginBottom="@dimen/_15sdp"
+                app:cardBackgroundColor="@color/primary_green"
+                app:cardCornerRadius="@dimen/_21sdp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="@string/submitbtn"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12ssp" />
+            </androidx.cardview.widget.CardView>
+
+        </RelativeLayout>
 
 
     </LinearLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/idveridoneBtn"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_43sdp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/_21sdp"
-        android:layout_marginRight="@dimen/_21sdp"
-        android:layout_marginBottom="@dimen/_30sdp"
-        app:cardBackgroundColor="@color/primary_green"
-        app:cardCornerRadius="@dimen/_21sdp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/opensans_bold"
-            android:text="@string/submitbtn"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_12ssp" />
-    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
