--- a/app/src/main/res/layout/latest_txn_item.xml
+++ b/app/src/main/res/layout/latest_txn_item.xml
@@ -5,9 +5,9 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical"
+    android:paddingStart="@dimen/_11sdp"
     android:paddingLeft="@dimen/_10sdp"
     android:paddingTop="@dimen/_10sdp"
-    android:paddingStart="@dimen/_11sdp"
     android:paddingRight="@dimen/_10sdp">
 
     <LinearLayout
@@ -20,41 +20,46 @@
             android:id="@+id/latestmessageTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_semibold"
             android:layout_weight=".65"
-            android:textColor="@color/primary_black"
-            android:visibility="visible"
             android:ellipsize="end"
-            android:singleLine="true"
+            android:fontFamily="@font/opensans_semibold"
             android:maxLines="1"
+            android:singleLine="true"
             android:text="Buy Tokens from Card "
+            android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp"
-            />
+            android:visibility="visible" />
+
+        <View
+            android:id="@+id/gapView"
+            android:layout_width="@dimen/_10sdp"
+            android:layout_height="@dimen/_10sdp"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/latestmessagTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_semibold"
-            android:singleLine="true"
             android:layout_weight=".3"
+            android:fontFamily="@font/opensans_semibold"
             android:gravity="start"
+            android:singleLine="true"
             android:text=" **1234"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp"
-            android:visibility="visible"/>
+            android:visibility="visible" />
 
-<!--        <TextView-->
-<!--            android:id="@+id/txnDescTV"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:fontFamily="@font/opensans_semibold"-->
-<!--            android:text="Send funds from Alison L"-->
-<!--            android:textColor="@color/primary_black"-->
-<!--            android:textSize="@dimen/_11ssp"-->
-<!--            android:singleLine="true"-->
-<!--            android:ellipsize="end"/>-->
+        <!--        <TextView-->
+        <!--            android:id="@+id/txnDescTV"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_weight="1"-->
+        <!--            android:fontFamily="@font/opensans_semibold"-->
+        <!--            android:text="Send funds from Alison L"-->
+        <!--            android:textColor="@color/primary_black"-->
+        <!--            android:textSize="@dimen/_11ssp"-->
+        <!--            android:singleLine="true"-->
+        <!--            android:ellipsize="end"/>-->
 
         <TextView
             android:id="@+id/amountTV"
@@ -63,10 +68,10 @@
             android:layout_alignParentRight="true"
             android:layout_marginStart="@dimen/_5sdp"
             android:fontFamily="@font/opensans_bold"
+            android:gravity="right"
             android:text="-100,0000,000"
             android:textColor="@color/primary_black"
-            android:textSize="@dimen/_12ssp"
-            android:gravity="right"/>
+            android:textSize="@dimen/_12ssp" />
 
 
     </LinearLayout>
@@ -102,8 +107,8 @@
                 android:layout_width="@dimen/_68sdp"
                 android:layout_height="@dimen/_14sdp"
                 android:fontFamily="@font/opensans_bold"
-                android:text="Pending"
                 android:gravity="center"
+                android:text="Pending"
                 android:textColor="#FFA701"
                 android:textSize="@dimen/_7ssp" />
 
@@ -114,12 +119,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_weight="1"
             android:fontFamily="@font/opensans_semibold"
+            android:gravity="right"
             android:text="Balance 1,00,000.00"
             android:textColor="@color/light_gray"
-            android:textSize="@dimen/_10ssp"
-            android:layout_weight="1"
-            android:gravity="right"/>
+            android:textSize="@dimen/_10ssp" />
 
     </LinearLayout>
 
